--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,16 @@
-FROM node:18-alpine
-
+# Stage 1: Build React app
+FROM node:18-alpine AS build
 WORKDIR /app
-
-# 複製 package.json 及 package-lock.json (或 yarn.lock)
 COPY package*.json ./
-
-RUN npm install
-
-# 複製所有專案檔案到容器中
+RUN npm ci --no-progress
 COPY . .
-
-# 執行建構
 RUN npm run build
 
-# 若有需要，可設定啟動命令，例如使用 nginx 來提供靜態檔案
-# CMD ["npx", "serve", "build"]
+# Stage 2: Serve static files using serve
+FROM node:18-alpine
+WORKDIR /app
+RUN npm install -g serve@14 && adduser -D frontend
+USER frontend
+COPY --from=build /app/build ./build
+EXPOSE 80
+CMD ["serve", "-s", "build", "-l", "80"]
