--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   geth:
     build: ./geth
@@ -5,7 +7,7 @@ services:
     volumes:
       - ./data:/geth/data
       - ./keystore:/geth/keystore
-      # 移除以下這一行：
+      # 如果已在 Dockerfile 中複製了 password.txt，則不需要掛載
       # - ./password.txt:/geth/password.txt
     ports:
       - "8545:8545"
@@ -23,92 +25,83 @@ services:
 
   ipfs:
     image: ipfs/go-ipfs:latest
+    container_name: suzoo_ipfs
     volumes:
       - ./data/ipfs:/data/ipfs
-    expose:
-      - "5001"        # 供內部Express/FastAPI訪問
-      - "8080"        # 供內部（或透過Nginx）訪問IPFS Gateway
+    ports:
+      - "5001:5001"
+      - "8080:8080"
     networks:
-      - backend_net
+      - ethereum-net
     healthcheck:
-      test: ["CMD", "ipfs", "id"]   # 試著執行簡單命令，ipfs id 返回節點資訊
+      test: ["CMD", "ipfs", "id"]
       interval: 30s
       timeout: 10s
       retries: 5
 
   express:
-    build: 
-      context: ./express     # 假設 Express 專案Dockerfile 在 express 資料夾
-      dockerfile: Dockerfile
-    image: my-express-api:latest
+    build: ./express
+    container_name: suzoo_express
     depends_on:
       geth:
         condition: service_healthy
       ipfs:
         condition: service_healthy
     networks:
-      - backend_net
-    expose:
-      - "3000"
+      - ethereum-net
     environment:
-      - ETH_RPC_URL=http://geth:8545      # 提供給Express程式使用的環境變數
-      - IPFS_API_URL=http://ipfs:5001     # 如Express需要訪問IPFS HTTP API
-      # 其他需要的環境變數，如 DB_*, SECRET_KEY 等
+      - ETH_RPC_URL=http://suzoo_geth:8545
+      - IPFS_API_URL=http://suzoo_ipfs:5001
+    ports:
+      - "3000:3000"
     healthcheck:
-      # 檢查Express是否啟動 (需Express提供/health端點返回200 OK)
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 15s
       timeout: 5s
       retries: 5
 
   fastapi:
-    build:
-      context: ./fastapi     # 假設 FastAPI Dockerfile 在 fastapi 資料夾
-      dockerfile: Dockerfile
-    image: my-fastapi:latest
+    build: ./fastapi
+    container_name: suzoo_fastapi
     depends_on:
       geth:
         condition: service_healthy
       ipfs:
         condition: service_healthy
     networks:
-      - backend_net
-    expose:
-      - "8000"
+      - ethereum-net
     environment:
-      - ETH_RPC_URL=http://geth:8545
-      - IPFS_API_URL=http://ipfs:5001
+      - ETH_RPC_URL=http://suzoo_geth:8545
+      - IPFS_API_URL=http://suzoo_ipfs:5001
+    ports:
+      - "8000:8000"
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 15s
       timeout: 5s
       retries: 5
 
   frontend:
-    build:
-      context: ./frontend    # React 前端 Dockerfile 路徑
-      dockerfile: Dockerfile
-    image: my-react-app:latest
+    build: ./frontend
+    container_name: suzoo_frontend
     depends_on:
       express:
         condition: service_healthy
       fastapi:
         condition: service_healthy
     networks:
-      - backend_net
+      - ethereum-net
     expose:
       - "80"
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost/"]
+      test: ["CMD", "curl", "-f", "http://localhost/"]
       interval: 15s
       timeout: 5s
       retries: 5
 
   nginx:
-    build:
-      context: ./nginx       # Nginx Dockerfile (包含 nginx.conf)
-      dockerfile: Dockerfile
-    image: my-nginx-proxy:latest
+    image: nginx:latest
+    container_name: suzoo_nginx
     depends_on:
       frontend:
         condition: service_healthy
@@ -116,12 +109,14 @@ services:
         condition: service_healthy
       fastapi:
         condition: service_healthy
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - "80:80"              # 將Nginx的80映射到主機80 (或您希望的端口)
+      - "80:80"
     networks:
-      - backend_net
-    # 若使用官方nginx映像 + volume方式，可以用volumes將 nginx.conf 放入容器
+      - ethereum-net
+    restart: unless-stopped
 
 networks:
-  backend_net:
+  ethereum-net:
     driver: bridge
