--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,166 +1,91 @@
 services:
-  # 1. PostgreSQL
-  suzoo_postgres:
-    image: postgres:15-alpine
-    container_name: suzoo_postgres
+  db:
+    image: postgres:13
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: "suzoo_db"
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - suzoo_network
-    ports:
-      - "5432:5432"
+      - db_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d suzoo_db || exit 1"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-
-  # 2. Ganache (取代原本 Geth)
-  suzoo_ganache:
-    image: trufflesuite/ganache:latest
-    container_name: suzoo_ganache
-    networks:
-      - suzoo_network
-    ports:
-      - "8545:8545"
-    command: [
-      "--host", "0.0.0.0",
-      "--port", "8545",
-      "--networkId", "20250405",
-      "--chainId", "20250405",
-      "--defaultBalanceEther", "100000"
-    ]
-    # 若要永久保留鏈資料，可取消註解並建立 ./ganache-data 目錄
-    # volumes:
-    #   - ./ganache-data:/data
-
-  # 3. IPFS
-  suzoo_ipfs:
-    image: ipfs/go-ipfs:latest
-    container_name: suzoo_ipfs
-    networks:
-      - suzoo_network
-    ports:
-      - "5001:5001"
-      - "8080:8080"
-    volumes:
-      - ipfs_data:/data/ipfs
-
-  # 4. FastAPI
-  suzoo_fastapi:
-    build:
-      context: ./fastapi
-      dockerfile: Dockerfile
-    container_name: suzoo_fastapi
-    depends_on:
-      suzoo_postgres:
-        condition: service_healthy
-      suzoo_ipfs:
-        condition: service_started
-      suzoo_ganache:
-        condition: service_started
-    environment:
-      DATABASE_URL: "postgresql://postgres:postgres@suzoo_postgres:5432/suzoo_db"
-      ETH_RPC_URL: "http://suzoo_ganache:8545"
-      IPFS_API_URL: "http://suzoo_ipfs:5001"
-    networks:
-      - suzoo_network
-    expose:
-      - "8000"
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:8000/health | grep '\"status\":\"ok\"'"]
-      interval: 30s
-      timeout: 30s
-      retries: 10
-      start_period: 120s
-
-  # 5. Express
-  suzoo_express:
-    build:
-      context: ./express
-      dockerfile: Dockerfile
-    container_name: suzoo_express
-    depends_on:
-      suzoo_postgres:
-        condition: service_healthy
-      suzoo_ganache:
-        condition: service_started
-    environment:
-      DATABASE_URL: "postgresql://postgres:postgres@suzoo_postgres:5432/suzoo_db"
-      ETH_RPC_URL: "http://suzoo_ganache:8545"
-      IPFS_API_URL: "http://suzoo_ipfs:5001"
-      NODE_ENV: "production"
-      PORT: "3000"
-    networks:
-      - suzoo_network
-    expose:
-      - "3000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # 6. React 前端
-  suzoo_frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: suzoo_frontend
-    depends_on:
-      suzoo_express:
-        condition: service_healthy
-      suzoo_fastapi:
-        condition: service_healthy
-    networks:
-      - suzoo_network
-    environment:
-      NODE_ENV: "production"
-    expose:
-      - "5000"
+  ganache:
+    image: trufflesuite/ganache-cli:latest
+    command: ganache-cli -h 0.0.0.0 -p 8545 -m "${GANACHE_MNEMONIC}" --db /data
+    volumes:
+      - ganache_data:/data
+    ports:
+      - "8545:8545"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000"]
+      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:8545 >/dev/null"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  ipfs:
+    image: ipfs/go-ipfs:latest
+    volumes:
+      - ipfs_data:/data/ipfs
+    ports:
+      - "4001:4001"   # Swarm port
+      - "5001:5001"   # API port
+      - "8080:8080"   # Gateway port
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:5001/api/v0/version"]
       interval: 30s
       timeout: 5s
-      retries: 3
-      start_period: 30s
+      retries: 5
 
-  # 7. Nginx
-  suzoo_nginx:
-    image: nginx:latest
-    container_name: suzoo_nginx
+  express:
+    build: ./express
+    env_file: .env
     depends_on:
-      suzoo_express:
+      db:
         condition: service_healthy
-      suzoo_fastapi:
-        condition: service_healthy
-      suzoo_frontend:
+      ganache:
         condition: service_started
-    networks:
-      - suzoo_network
+      ipfs:
+        condition: service_healthy
+      fastapi:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:3000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+
+  fastapi:
+    build: ./fastapi
+    env_file: .env
+    depends_on:
+      ipfs:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+
+  nginx:
+    build: ./frontend   # This Dockerfile will handle building the React app and Nginx
+    depends_on:
+      express:
+        condition: service_healthy
+      fastapi:
+        condition: service_healthy
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1/"]
       interval: 30s
       timeout: 5s
-      retries: 3
-      start_period: 10s
-
-networks:
-  suzoo_network:
-    driver: bridge
+      retries: 5
 
 volumes:
-  postgres_data:
+  db_data:
   ipfs_data:
-  # 如果要持久化 Ganache:
-  # ganache_data:
+  ganache_data:
