--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,10 +1,15 @@
-FROM python:3.9-slim
+FROM python:3.10-slim
 
+# Set working directory
 WORKDIR /app
-COPY requirements.txt ./
+
+# Install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app
-EXPOSE 8000
+# Copy FastAPI app code
+COPY . .
 
+EXPOSE 8000
+# Launch the FastAPI app with Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
