--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,21 @@
 # Stage 1: Build React app
-FROM node:18-alpine AS build
+FROM node:18 as builder
+
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --no-progress
-COPY . .
+RUN npm install
+COPY public public
+COPY src src
 RUN npm run build
 
-# Stage 2: Serve static files using serve
-FROM node:18-alpine
-WORKDIR /app
-RUN npm install -g serve@14 && adduser -D frontend
-USER frontend
-COPY --from=build /app/build ./build
+# Stage 2: Setup Nginx to serve frontend and act as reverse proxy
+FROM nginx:1.21-alpine
+
+# Copy custom Nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy React build artifacts from the builder stage
+COPY --from=builder /app/build /usr/share/nginx/html
+
 EXPOSE 80
-CMD ["serve", "-s", "build", "-l", "80"]
+CMD ["nginx", "-g", "daemon off;"]
