--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,31 +1,32 @@
-upstream express_service {
-    server suzoo_express:3000;
-}
-
-upstream fastapi_service {
-    server suzoo_fastapi:8000;
-}
-
 server {
     listen 80;
     server_name _;
 
-    # React 靜態檔案 (build) => /usr/share/nginx/html
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
 
-    # Express API => /api/xxx
+    # Redirect API calls to Express backend
     location /api/ {
-        proxy_pass http://express_service/;
+        proxy_pass http://express:3000/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
+        proxy_set_header Connection '';
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # FastAPI => /fastapi/xxx
+    # Redirect FastAPI calls
     location /fastapi/ {
-        rewrite ^/fastapi/(.*)$ /$1 break;
-        proxy_pass http://fastapi_service/;
+        proxy_pass http://fastapi:8000/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
+        proxy_set_header Connection '';
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Serve static files for React and handle client-side routing
+    location / {
+        try_files $uri $uri/ /index.html =404;
     }
 }
