--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "kaishield-frontend-vss",
+  "name": "frontend",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
   "dependencies": {
-    "axios": "^1.4.0",
-    "i18next": "^21.6.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.5",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "socket.io-client": "^4.6.1"
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
