--- a/.env
+++ b/.env
@@ -44,3 +44,19 @@ DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@suzoo_postgres:5432/suzoo_d
 # Node環境
 ########################################
 NODE_ENV=production
+########################################
+# Ganache (區塊鏈)
+########################################
+GANACHE_HOST=ganache
+GANACHE_PORT=8545
+
+########################################
+# IPFS
+########################################
+IPFS_API_URL=http://ipfs:5001
+
+########################################
+# DMCA (示例：若想測試空檔案 MD5 -> d41d8cd98f00b204e9800998ecf8427e)
+########################################
+DMCA_BANNED_FINGERPRINTS=d41d8cd98f00b204e9800998ecf8427e
+
