--- a/express/package.json
+++ b/express/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "suzooka_express_vss",
+  "name": "express-backend",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.9.0",
-    "dotenv": "^16.0.3",
-    "web3": "^1.10.1",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "axios": "^1.3.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
-    "axios": "^1.3.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
-    "bcrypt": "^5.1.0"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.9.0",
+    "web3": "^1.8.2"
   }
 }
