--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,15 +1,9 @@
 FROM python:3.10-slim
 
-# Set working directory
 WORKDIR /app
 
-# Install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install fastapi uvicorn requests
 
-# Copy FastAPI app code
-COPY . .
-
+COPY main.py .
 EXPOSE 8000
-# Launch the FastAPI app with Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn","main:app","--host","0.0.0.0","--port","8000"]
