--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,6 @@
 FROM nginx:alpine
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
+
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+CMD ["nginx","-g","daemon off;"]
