--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,31 +2,31 @@ server {
     listen 80;
     server_name _;
 
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    client_max_body_size 100M;
 
-    # Redirect API calls to Express backend
+    # React 前端 => http://react:3000
+    location / {
+        proxy_pass http://react:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Express API => http://express:3000
     location /api/ {
         proxy_pass http://express:3000/;
-        proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header Connection '';
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Redirect FastAPI calls
-    location /fastapi/ {
-        proxy_pass http://fastapi:8000/;
-        proxy_http_version 1.1;
+    # FastAPI => http://fastapi:8000 (若前端需要直接存取)
+    # 如需 /api/fastapi prefix:
+    location /api/fastapi/ {
+        rewrite ^/api/fastapi/(.*)$ /$1 break;
+        proxy_pass http://fastapi:8000;
         proxy_set_header Host $host;
-        proxy_set_header Connection '';
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # Serve static files for React and handle client-side routing
-    location / {
-        try_files $uri $uri/ /index.html =404;
     }
 }
