--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,13 @@ services:
       - backend-net
 
   ###################################################################
-  # 2. Ganache (私有鏈)
+  # 2. Ganache (私有鏈) - 修改後版本
   ###################################################################
   ganache:
-    image: trufflesuite/ganache-cli:latest
+    build:
+      context: ./ganache
+      dockerfile: Dockerfile
     container_name: suzoo_ganache
-    command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
     ports:
       - "8545:8545"
     healthcheck:
