--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - backend-net
 
   ###################################################################
-  # 2. Ganache (私有鏈) - 修改後版本
+  # 2. Ganache (私有鏈) - 更新健康檢查設定
   ###################################################################
   ganache:
     build:
@@ -30,10 +30,10 @@ services:
     ports:
       - "8545:8545"
     healthcheck:
-      test: ["CMD-SHELL", "curl --silent --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' -H 'Content-Type: application/json' http://localhost:8545 || exit 1"]
+      test: ["CMD-SHELL", "curl --fail --silent -X POST -H 'Content-Type: application/json' --data '{\"jsonrpc\":\"2.0\",\"method\":\"net_version\",\"params\":[],\"id\":1}' http://localhost:8545 || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
     networks:
       - backend-net
 
