--- a/ganache/Dockerfile
+++ b/ganache/Dockerfile
@@ -1,6 +1,6 @@
 FROM trufflesuite/ganache-cli:latest
 
-# 安裝 curl 工具（因為健康檢查會使用 curl）
+# 安裝 curl 工具，供健康檢查使用
 RUN apk add --no-cache curl
 
 CMD ["ganache-cli", "--host", "0.0.0.0", "--port", "8545", "--accounts", "5", "--defaultBalanceEther", "100"]
