--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-slim
 
 WORKDIR /app
 
-# 複製 package.json 並安裝相依套件
+
 COPY package.json ./
 RUN npm install
 
@@ -12,7 +12,7 @@ COPY . .
 # 建置 React 專案（產生 production 的 build 資料夾）
 RUN npm run build
 
-# 安裝全域的 serve 用來啟動 production build
+# 安裝全域的 serve 套件用以啟動 production build
 RUN npm install -g serve
 
 # 對外開放 3000 埠
