--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "kaishield-crawler",
+  "name": "suzoo-crawler",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "axios": "^1.3.6",
-    "dotenv": "^16.0.3"
+    "puppeteer": "^19.11.1"
   }
 }
