--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,10 @@
 server {
-    # 監聽 80 埠
     listen 80;
-    
-    # 將 server_name 指定成 suzookaizokuhunter.com 與 www.suzookaizokuhunter.com
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # 設定可上傳檔案大小上限（自行調整）
     client_max_body_size 100M;
 
-    # 1. React 前端 => http://react:3000
+    # 1. React => http://react:3000
     location / {
         proxy_pass http://react:3000;
         proxy_set_header Host $host;
@@ -16,7 +12,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 2. Express API => http://express:3000
+    # 2. Express => http://express:3000
     location /api/ {
         proxy_pass http://express:3000/;
         proxy_set_header Host $host;
@@ -25,9 +21,7 @@ server {
     }
 
     # 3. FastAPI => http://fastapi:8000
-    #    若前端需要以 /api/fastapi/... 路徑呼叫 FastAPI:
     location /api/fastapi/ {
-        # rewrite 將 /api/fastapi/ 路徑去掉後再轉給 FastAPI
         rewrite ^/api/fastapi/(.*)$ /$1 break;
         proxy_pass http://fastapi:8000;
         proxy_set_header Host $host;
