--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
 POSTGRES_DB=suzoo_db
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
 ########################################
 # JWT 秘鑰
@@ -20,8 +22,7 @@ CLOUDINARY_API_SECRET=CBLyksZYM6udCSY2-Jhv3a4E5dI
 ########################################
 # RapidAPI (真實侵權爬蟲, e.g. Youtube / Shopee Scraper)
 ########################################
-# !!請確保Key完整!!
-RAPIDAPI_KEY=71dbbf39f7msh794???...
+RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
 
 ########################################
 # Ganache (本地Ethereum私有鏈)
