--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,14 +1,7 @@
-FROM node:18-slim
-
-WORKDIR /app
-
-COPY package.json ./
-RUN apt-get update && apt-get install -y python3 build-essential && \
-    npm install && \
-    apt-get remove -y python3 build-essential && apt-get autoremove -y && \
-    rm -rf /var/lib/apt/lists/*
-
-COPY . .
-
-EXPOSE 3000
-CMD ["node","server.js"]
+const pool = new Pool({
+  host: process.env.POSTGRES_HOST || 'postgres',
+  port: process.env.POSTGRES_PORT || 5432,
+  user: process.env.POSTGRES_USER,         // suzoo
+  password: process.env.POSTGRES_PASSWORD, //KaiShieldDbPass2023!
+  database: process.env.POSTGRES_DB,       // suzoo_db
+});
